# Audio_Typewriter

./: .gitignore  Human Zone.md  README.md  pyproject.toml  requirements.txt  start.bat  start.ps1  start_backend.bat  start_web.bat
apps/api/app/: db.py  main.py  models.py  schemas.py  text.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/services/: __init__.py  asr_service.py  audio_base_service.py  index_service.py  mixing_service.py  task_queue_service.py
apps/api/tests/: test_health.py  test_pipeline.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts
data/: asr_task_queue.json
docs/: tech-stack.md  technical-details.md  usage-and-notes-zh.md
infra/docker/: docker-compose.yml
scripts/: bootstrap.ps1  download_model.py  remove_vad_suffix_files.ps1  start_all.ps1
